<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.tencent.qcloud.suixinbo.views.customviews.TemplateTitle
        android:id="@+id/tt_head"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:titleText="@string/profile_set"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:text="@string/set_live_animator"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <com.tencent.qcloud.suixinbo.views.customviews.CustomSwitch
            android:id="@+id/cs_animator"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClick"
            android:layout_marginTop="5dp"
            android:src="@drawable/btn_switch_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <com.tencent.qcloud.suixinbo.views.customviews.LineControllerView
        android:id="@+id/lcv_set_log_level"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:onClick="onClick"
        app:name="@string/set_log_level"
        app:isBottom="true"
        app:canNav="true"
        />
    <com.tencent.qcloud.suixinbo.views.customviews.LineControllerView
        android:id="@+id/lcv_set_version"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:onClick="onClick"
        app:name="@string/set_sdk_version"
        app:isBottom="true"
        app:canNav="false"
        />
</LinearLayout>
