<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/host_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="host" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_marginTop="19dp"
        android:background="@null"
        android:gravity="center_horizontal"
        android:text="@string/invite_dialog_tips"
        android:textColor="@color/colorGray3"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="31dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/invite_refuse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:background="@drawable/btn_invite"
            android:gravity="center"
            android:text="@string/btn_refuse"
            android:textColor="@color/colorRed" />

        <TextView
            android:id="@+id/invite_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_invite"
            android:gravity="center"
            android:text="@string/btn_agree"
            android:textColor="@color/colorRed" />
    </LinearLayout>
</LinearLayout>