<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tencent_tls_ui_background"
    tools:context=".IndependentRegisterActivity">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/ui_title_background">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/ui_title_background"
            android:src="@drawable/ui_title_arrow_left"/>

        <TextView
            style="@style/tencent_tls_ui_titleFontStyle"
            android:text="@string/tencent_tls_ui_independentRegisterTitle"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/tencent_tls_ui_activity_horizontal_margin"
        android:paddingRight="@dimen/tencent_tls_ui_activity_horizontal_margin">

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/tencent_tls_ui_edittext_height"
            android:paddingLeft="@dimen/tencent_tls_ui_edittext_leftpadding"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/tencent_tls_ui_edittext_margin"
            android:background="@drawable/tencent_tls_ui_rounded_rectangle_normal"
            android:singleLine="true"
            android:hint="@string/str_hint_account"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/tencent_tls_ui_edittext_height"
            android:paddingLeft="@dimen/tencent_tls_ui_edittext_leftpadding"
            android:layout_marginBottom="@dimen/tencent_tls_ui_edittext_margin"
            android:background="@drawable/tencent_tls_ui_rounded_rectangle_normal"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/str_hint_pwd"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/tencent_tls_ui_edittext_height"
            android:background="@drawable/tencent_tls_ui_btn_blue_bg"
            android:layout_marginTop="@dimen/tencent_tls_ui_edittext_margin"
            android:textSize="@dimen/tencent_tls_ui_buttonFontSize"
            android:textColor="@color/tencent_tls_ui_white"
            android:text="注册"/>


    </LinearLayout>



</LinearLayout>


